added dashbaord html links

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <br>
                         <p class="project-text">The Release Year analysis takes us on a captivating journey through history, shedding light on the societal and cultural influences that have shaped films over the years. Lets see what secrets time unfolds</p>
                         <br>
-                        <button type="button" class="btn project-button" target="_blank" onclick="#">View Analysis</button>
+                        <button type="button" class="btn project-button" target="_blank" onclick="window.location.href = 'dashboard_files/release_year_analysis.html'">View Analysis</button>
                     </div> 
                 </div>
 
@@ -114,7 +114,7 @@
                         <br>
                         <p class="project-text">Through Director analysis, we unveil the secret tapestry woven by these artistic maestros. We delve into their movie ratings, dissect their reviews, and explore the box office performance of their cinematic creations.</p>
                         <br>
-                        <button type="button" class="btn project-button" target="_blank" onclick="#">View Analysis</button>
+                        <button type="button" class="btn project-button" target="_blank" onclick="window.location.href = 'dashboard_files/director_analysis.html'">View Analysis</button>
                     </div>
                 </div>
 
@@ -124,7 +124,7 @@
                         <br>
                         <p class="project-text">Explore the evolution of actors careers through stunning line charts and heat maps. Witness the shifting preferences of audiences, as these charismatic performers adapt and transform, redefining themselves with each new role.</p>
                         <br>
-                        <button type="button" class="btn project-button" target="_blank" onclick="#">View Analysis</button>
+                        <button type="button" class="btn project-button" target="_blank" onclick="window.location.href = 'dashboard_files/actor_analysis.html'">View Analysis</button>
                     </div>
                 </div>
             
@@ -139,7 +139,7 @@
                         <br>
                         <p class="project-text">Lets unravel the secrets hidden within the ratings, exploring the popularity and success of movies through the eyes of viewers and critics alike. Its a key to unraveling the movie success and understanding audience taste.</p>
                         <br>
-                        <button type="button" class="btn project-button" target="_blank" onclick="#">View Analysis</button>
+                        <button type="button" class="btn project-button" target="_blank" onclick="window.location.href = 'dashboard_files/IMDB_rating_analysis.html'">View Analysis</button>
                     </div>
                 </div>
 
@@ -149,7 +149,7 @@
                         <br>
                         <p class="project-text">Through the Meta Score analysis, we delve into a rating system that aggregates the voices of movie critics and publications, distilling their collective wisdom into a score that reflects the overall critical consensus.</p>
                         <br>
-                        <button type="button" class="btn project-button" target="_blank" onclick="#">View Analysis</button>
+                        <button type="button" class="btn project-button" target="_blank" onclick="window.location.href = 'dashboard_files/meta_score_analysis.html'">View Analysis</button>
                     </div>
                 </div>
 
@@ -159,7 +159,7 @@
                         <br>
                         <p class="project-text">Lets peer into the collective voice of the public and the level of audience engagement it generates. By meticulously examining the number of votes a movie receives on IMDb, we unravel fervor with which viewers have embraced it.</p>
                         <br>
-                        <button type="button" class="btn project-button" target="_blank" onclick="#">View Analysis</button>
+                        <button type="button" class="btn project-button" target="_blank" onclick="window.location.href = 'dashboard_files/no_of_votes_analysis.html'">View Analysis</button>
                     </div>
                 </div>
             </div>
