--- a/about_us.html
+++ b/about_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Us</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -33,8 +33,8 @@
 </head>
 <body>
     <div class="header1">
-        <img src="images/imdb_logo.png" alt="rough sketch" width="60" height="60" style="float:left">
-		<label>About Us</label>
+        <img src="images/imdb_logo.png" alt="rough sketch" width="60" height="60" style="float:center">
+		<label>About ME</label>
 	</div>
 
     <div class="sidenav" style="float:left;width:13%">
@@ -54,7 +54,7 @@
             </div>
             <div class="row main_div" style="padding-top:20px;">
                 <div class="column2" style="z-index: 1;">
-                    <p><b>Hello World! I'm Swapnil Deshpande, a Data Warehouse Developer and a Data Analyst based out of United States.</b></p>
+                    <p><b>Hello World! I'm Swapnil Deshpande, a Data Warehouse Developer and a Data Analyst based out of the United States.</b></p>
         
                     <p><b>Take some glimpse at my professional growth:</b></p>
         
